2007-12-07  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* docs/tutorial/clutter-tut.xml:
	* docs/tutorial/figures/Makefile.am:
	* examples/Makefile.am:
	* examples/effects/main.c: 
	Added an Effects chapter and example. I am not sure yet that I 
	see the advantage of Behaviours over Effects, and the 
	ClutterEffectsTemplate objects does not seem better than just 
	passing the timeline and alpha-callback to an effect function.

2007-12-07  Murray Cumming  <murrayc@murrayc.com>

	* AUTHORS: Corrected this.
	* TODO: Removed this.

2007-12-05  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Introduction: Mention that both 
	OpenGL or OpenGL ES may be used as the backend.

2007-12-05  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* docs/tutorial/clutter-tut.xml:
	* examples/Makefile.am:
	* examples/custom_actor/Makefile.am:
	* examples/custom_actor/main.c:
	* examples/custom_actor/triangle_actor.c:
	* examples/custom_actor/triangle_actor.h: Added a custom actor 
	example by copying and simplifying ClutterRectangle. Described 
	the implementation. Still need to actually make it paint a 
	triangle though.

2007-12-05  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Behaviours: Mention that the 
	alpha callback will need to discover the timeline current and total 
	frames.
	Timelines: Give hints about the duration of a timeline.
	Mention unrefing of behaviours and timelines.
	* examples/behaviour/main.c: (on_alpha): Use the timeline. Now this 
	makes more sense.

2007-12-05  Murray Cumming  <murrayc@murrayc.com>

	* examples/full_example/main.c: Made this slightly more useful, 
	trying to make a clicked image rotate to the front. 
	But clutter_behaviour_ellipse_set_angle_end() does not seem to 
	have the desired effect.

2007-12-05  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/clutter-tut.xml: Introduction: 
	Mention that the examples are mostly unimpressive visually,